--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -6,9 +6,9 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <link href="resources/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <script src="resources/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-        <script src="resources/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+        <h:outputStylesheet library="css" name="bootstrap.min.css" />
+        <h:outputScript name="js/jquery-2.1.4.min.js" />
+        <h:outputScript name="js/bootstrap.min.js" />
         <title>Facelet Title</title>
     </h:head>
     <h:body>
