--- a/web/admin/livros/editar.xhtml
+++ b/web/admin/livros/editar.xhtml
@@ -1,12 +1,68 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        Hello from Facelets
-    </h:body>
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core">
+    <ui:composition template="/templates/admin.xhtml">
+        <ui:define name="content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h1>Teste</h1>
+                        <h:form id="livro">
+                            <div class="form-group">
+                                <h:outputLabel for="idTitulo" value="Título:"/>
+                                <h:inputText styleClass="form-control" id="idTitulo" value="#{livroMB.livroSelecionado.titulo}"  />
+                            </div>
+                            <div class="form-group">
+                                <h:outputLabel for="idISBN" value="ISBN:"/>
+                                <h:inputText id="idISBN" styleClass="form-control" value="#{livroMB.livroSelecionado.isbn}" />
+                            </div>
+                            <div class="form-group">
+                                <h:outputLabel for="idAno" value="Ano"/>
+                                <h:inputText id="idAno" styleClass="form-control" value="#{livroMB.livroSelecionado.ano}" />
+                            </div>
+                            <div class="form-group">
+                                <h:outputLabel for="idDisponivel" value="Disponível:" />
+                                <h:selectOneMenu id="idDisponivel" styleClass="form-control" value="#{livroMB.livroSelecionado.disponivel}">
+                                    <f:selectItem itemLabel="Sim" itemValue="true" />
+                                    <f:selectItem itemLabel="Não" itemValue="false" />
+                                </h:selectOneMenu>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <h:outputLabel for="idAutores" value="Autores:" />
+                                    <h:dataTable value="#{livroMB.autores}" var="autor" id="idAutores">
+                                        <h:column>
+                                            <div class="col-md-8">
+                                                <h:inputText value="#{autor}" styleClass="form-control" />
+                                            </div>
+                                            <div class="col-md-4">
+                                                <h:commandLink value="Remover" action="#{livroMB.removeAutor()}" styleClass="btn btn-primary"/>
+                                            </div>
+                                        </h:column>
+                                    </h:dataTable>
+                                    <h:commandButton value="Adicionar" action="#{livroMB.adicionaAutor()}" class="btn btn-primary"/>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <h:outputLabel for="idEditora" value="Editora:" />
+                                <h:selectOneMenu id="idEditora" value="#{livroMB.editoraSelecionada}" styleClass="form-control">
+                                    <f:selectItems value="#{livroMB.editoras}" />
+                                <f:converter converterId="editoraConverter" />
+                            </h:selectOneMenu>
+                            </div>
+                            <div class="form-group">
+                                <h:commandButton value="Editar" styleClass="btn btn-success" action="#{livroMB.atualizarLivro()}"/>
+                                <h:button value="Voltar" outcome="/admin/index" class="btn btn-default"/>
+                            </div> 
+                        </h:form>
+                    </div>
+                </div>
+            </div>
+        </ui:define>
+    </ui:composition>
 </html>
+
 
